--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,18 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# Default ignored files
+/shelf/
+/workspace.xml
+/.idea/
+# Rider ignored files
+/contentModel.xml
+/.idea.EList.iml
+/modules.xml
+/projectSettingsUpdater.xml
+# Datasource local storage ignored files
+/../../../../../../../../../../../:\André\OneDrive\source\repos\andrefmello91\EList\EList\.idea\.idea.EList\.idea/dataSources/
+/dataSources.local.xml
+# Editor-based HTTP Client requests
+/httpRequests/
