--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,11 +22,12 @@ jobs:
           source-url: https://api.nuget.org/v3/index.json
         env:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_API_KEY}}        
-          
-      - name: Build solution and generate NuGet package
-        run: |  
-          cd <project>
-          dotnet pack -c Release -o out  
+                 
+      - name: Build project
+        run: dotnet build -c Release
 
-      - name: Push generated package to GitHub registry
-        run: dotnet nuget push ./<project>/out/*.nupkg --skip-duplicate --no-symbols true
+      - name: Generate a NuGet package
+        run: dotnet pack --no-build -c Release -o .
+
+      - name: Push package registry
+        run: dotnet nuget push *.nupkg
