--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,12 +22,11 @@ jobs:
           source-url: https://api.nuget.org/v3/index.json
         env:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_API_KEY}}        
-                 
-      - name: Build project
-        run: dotnet build -c Release
+         
+      - name: Build solution and generate NuGet package
+        run: |  
+          cd andrefmello91.EList
+          dotnet pack -c Release -o out  
 
-      - name: Generate a NuGet package
-        run: dotnet pack --no-build -c Release -o .
-
-      - name: Push package registry
-        run: dotnet nuget push *.nupkg
+      - name: Push generated package to GitHub registry
+        run: dotnet nuget push ./andrefmello91.EList/out/*.nupkg --skip-duplicate --no-symbols true
