--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build solution and generate NuGet package
         run: |  
           cd andrefmello91.EList
-          dotnet pack -c Release -o bin/Release  
+          dotnet pack -c Release andrefmello91.EList.csproj -o out
 
       - name: Push generated package to GitHub registry
-        run: dotnet nuget push ./andrefmello91.EList/bin/Release/*.nupkg --skip-duplicate --no-symbols true
+        run: dotnet nuget push ./andrefmello91.EList/out/*.nupkg --skip-duplicate --no-symbols true
