--- a/andrefmello91.EList/andrefmello91.EList.csproj
+++ b/andrefmello91.EList/andrefmello91.EList.csproj
@@ -3,14 +3,14 @@
     <PropertyGroup>
         <TargetFrameworks>net5.0;netcoreapp3.1;netstandard2.0</TargetFrameworks>
         <PackageId>andrefmello91.EList</PackageId>
-        <Version>0.1.2</Version>
+        <Version>1.0.1</Version>
         <LangVersion>9.0</LangVersion>
         <Authors>andrefmello91</Authors>
         <PackageDescription>Generic list with events and duplicate and null item checking. Based in code by CodeProject: https://www.codeproject.com/Articles/31539/List-With-Events</PackageDescription>
         <RepositoryUrl>https://github.com/andrefmello91/EList</RepositoryUrl>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageVersion>0.1.2</PackageVersion>
-        <PackageReleaseNotes>Added EList creation extension</PackageReleaseNotes>
+        <PackageVersion>1.0.1</PackageVersion>
+        <PackageReleaseNotes>Initial pre-release.</PackageReleaseNotes>
         <PackageProjectUrl>https://github.com/andrefmello91/EList</PackageProjectUrl>
     </PropertyGroup>
 
