--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,24 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+    - name: Publish
+      uses: Squazz/publish-nuget@v2.5.6
       with:
-        dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
-    - name: PublishGitHub  
-      uses: Rebel028/publish-nuget@2.6.1  
-      with:   
-       PROJECT_FILE_PATH: andrefmello91.EList/andrefmello91.EList.csproj 
-       NUGET_SOURCE: https://nuget.pkg.github.com/andrefmello91
-       NUGET_KEY: ${{secrets.NUGET_GITHUB_KEY}}
-    - name: Publish  
-      uses: brandedoutcast/publish-nuget@v2.5.5  
-      with:   
-       PROJECT_FILE_PATH: andrefmello91.EList/andrefmello91.EList.csproj 
+       PROJECT_FILE_PATH: andrefmello91.EList/andrefmello91.EList.csproj
        NUGET_KEY: ${{secrets.NUGET_API_KEY}}
